[release-server/SBOT-185]: [deploy] 테스트 코드 수정